# osi-model-reference-fmu

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  3rd_party_licenses.md  CMakeLists.txt  README.md  example_model_reference_map.json
fmu/: CMakeLists.txt  model_fmu.cpp
lib/: fmu4cppOSMP.cmake
src/: CMakeLists.txt  Model.cpp  Model.h  README.md
